# pixel-lens

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  capture_helper.m  color.rs  cursor.rs  lib.rs  main.rs
ui/: app.js  color-dictionary.json  index.html  styles.css
ui/i18n/: en.json  ja.json
